--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "puppeteer": "^10.1.0"
   },
   "scripts": {
-    "package": "sudo pkg index.js -t node14-linux-x64,node14-macos-x64,node14-win-x64 --public --output geo-bot"
+    "package": "sudo pkg index.js -t node14-linux-x64,node14-macos-x64,node14-win-x64 --public --output build/geo-bot"
   }
 }
